moved the footer and hero into partials

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ title: The virtually limited space of BBailey
                 <section>
                     <header class="major">
                         <h2>My Blog Posts</h2>
+                        <p>{{ page.path }}</p>
                     </header>
                     <div class="row">
                         <!-- the blog posts section -->
