--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ title: The virtually limited space of BBailey
                 <section>
                     <header class="major">
                         <h2>My Blog Posts</h2>
-                        <p>{{ page.url }}</p>
+                        <p>{{ site.url }}</p>
                     </header>
                     <div class="row">
                         <!-- the blog posts section -->
