WIP integration of scrollspy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: The virtually limited space of BBailey
 ---
 
 <!-- Main Wrapper -->
-<div id="main-wrapper" class="mainWrapper">
+<div id="main-wrapper" class="main-wrapper">
   <div class="container">
     <div class="row">
       <div id="my-story" class="12u">
@@ -60,7 +60,7 @@ title: The virtually limited space of BBailey
     </div>
   </div>
 </div> <!-- Main Wrapper -->
-<div id="blog-wrapper" class="blogWrapper">
+<div id="blog-wrapper" class="blog-wrapper">
   <div class="container">
     <div id="blog-posts" class="12u"> <!-- Blog section -->
       <section>
