fixed scroll to a certain point

--- a/gerrod-wilson.html
+++ b/gerrod-wilson.html
@@ -2,5 +2,16 @@
 layout: page
 title: Gerrod Wilson
 ---
-  
+
 This is for Gerrod Wilson, RIP little big brother
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempor, erat a faucibus lobortis, metus leo imperdiet urna, vitae pharetra felis tortor non nunc. Aliquam porta leo ut maximus pulvinar. Suspendisse congue, libero et consectetur maximus, dui risus cursus arcu, dictum dignissim eros lorem eget lacus. 
+Integer ultrices ipsum id nibh porta pharetra non ac velit. Vivamus ut justo imperdiet justo rhoncus dignissim. Duis ac massa vitae justo pellentesque tristique. Curabitur luctus a sem quis vestibulum. Cras iaculis leo in tortor tempus lobortis. Aliquam accumsan neque leo, non porttitor nulla luctus in. Vestibulum ex nunc, ultrices ac iaculis eget, viverra sed tortor. Ut sit amet erat et ligula ullamcorper rhoncus. Etiam pellentesque nec ante eu lobortis.
+
+Maecenas ante nibh, fermentum vitae magna sit amet, finibus auctor sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed aliquam mi ac turpis bibendum, vestibulum laoreet dui lobortis. Ut dapibus nibh facilisis efficitur pulvinar. 
+Cras congue, odio ut auctor egestas, lectus ipsum placerat felis, ut pretium arcu leo a nisl. Pellentesque ut turpis ullamcorper enim feugiat bibendum ac non lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus convallis metus in sem aliquam, ut semper justo tempus. Vestibulum varius libero ac sodales mattis.
+Donec tincidunt, justo et placerat commodo, dui ipsum auctor lectus, sit amet aliquet nisi est in purus. Pellentesque eget neque nisi. Suspendisse commodo lobortis nibh, vel pharetra diam consequat at. Donec imperdiet, dui in ullamcorper aliquet, velit odio mollis enim, maximus dignissim turpis mi sodales ante. In ornare sapien in tincidunt tempor.
+  
+Vestibulum at scelerisque urna. Nulla sit amet iaculis nibh. Donec porttitor at ligula quis pretium. Nam porta dolor vel vehicula eleifend. Nulla eu dui gravida, vehicula eros vel, eleifend est. Morbi nec suscipit eros, facilisis maximus orci. Nunc hendrerit, sapien vel posuere aliquet, urna diam vestibulum urna, eget rutrum nisi enim sit amet diam. Pellentesque nec facilisis augue, hendrerit iaculis magna.
+Morbi blandit consequat nisi, vitae gravida augue.  Proin porta id tellus in volutpat. Nunc facilisis placerat bibendum. Praesent a sodales odio.
+
