WIP configuring s3-website to deploy to aws

--- a/index.html
+++ b/index.html
@@ -14,45 +14,43 @@ title: The virtually limited space of BBailey
           </header>
           <div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed risus erat. Mauris
-              rutrum ligula et ipsum imperdiet, id vulputate elit rutrum. In ornare turpis in turpis
-              semper, non pretium erat interdum. Ut semper vel orci at malesuada. Proin non dui nec nulla
-              vestibulum aliquam quis id magna. Sed ipsum tortor, malesuada et augue eget, dignissim
-              imperdiet lorem. Proin eleifend porta magna sed interdum. Curabitur varius orci a diam
-              sagittis faucibus. Nullam risus odio, pretium a diam et, commodo pellentesque mauris.
-              Pellentesque mattis mauris ut placerat pharetra. Aliquam erat volutpat. Nam aliquet orci non
-              turpis laoreet, sed commodo dolor lobortis. Duis varius aliquet neque ac tristique. Donec
-              turpis turpis, molestie quis leo quis, adipiscing tincidunt lorem. Proin et lacus sit amet
-              purus egestas fringilla id at massa.
+                My journey began April 8<sup>th</sup>, 1987 in Washington, D.C. but for the sake of brevity I will start with one particular formative experience;
+                amongst many, which started me on this lifelong journey in technology.  One day in the late 90’s on one of our many trips to the bookstore
+                my mother and I would take, I convinced my mother to purchase me an A+ Certification for Dummies book.  With the knowledge from this book
+                and the household computer, a Compaq Presario EZ2200 Desktop, my curiosity, time and a Phillips screwdriver I disassembled this machine to
+                learn the internals of this engineering achievement that is so ubiquitous it is often taken for granted.  This was the beginning of my
+                journey to unravel the manifold of systems that make up this complex tool that many of us have come to be inseparable from.
+            </p>
 
-              Pellentesque placerat interdum tempor. Nunc pharetra diam non auctor posuere. Fusce blandit
-              auctor mi, ut pulvinar elit tempor quis. Donec interdum, magna id blandit iaculis, neque
-              diam rhoncus velit, vel euismod tellus elit a dolor. Nullam bibendum odio at malesuada
-              fermentum. Cras in blandit mi. Ut sit amet metus dui. Suspendisse posuere feugiat facilisis.
-              Nullam ut enim et tortor sollicitudin scelerisque non ut mauris. Vestibulum tincidunt
-              dapibus lectus, nec ultricies velit facilisis vitae. Aenean faucibus neque eu gravida
-              auctor. Praesent tempus eros ac urna tincidunt, ut tincidunt eros mollis. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Ut non neque malesuada, mattis ante a, laoreet felis.
-
-              Quisque nunc nibh, rhoncus nec tortor vitae, mattis blandit metus. Quisque mollis ut erat in
-              aliquet. Sed tincidunt velit vel luctus convallis. Vestibulum vel elit eget quam dictum
-              volutpat. Fusce eget convallis sapien. Praesent porttitor molestie massa sit amet
-              scelerisque. Vestibulum gravida vitae nulla vitae semper. Nulla et odio aliquam, venenatis
-              purus ac, egestas dolor. Fusce tincidunt tristique arcu, nec convallis mi rhoncus at. Donec
-              tortor mauris, condimentum sit amet aliquam vitae, pretium at sapien.
-
-              Sed tempor nisl ut lectus aliquet placerat. Cras adipiscing molestie ornare. Fusce tortor
-              eros, facilisis ut leo vitae, suscipit condimentum ante. Curabitur porttitor augue eget
-              purus gravida dapibus eu ut nisi. Pellentesque malesuada blandit ligula eget sagittis. Proin
-              ac sollicitudin erat, quis ultrices ipsum. Nulla eget suscipit metus. Proin congue semper
-              lobortis. Praesent nec imperdiet sem, vitae molestie nunc. Donec quis odio mi. Ut luctus
-              mollis quam, adipiscing tincidunt sapien porta vitae. Donec varius at justo vitae rhoncus.
-
-              Donec libero ligula, tempus a risus eget, ornare condimentum tellus. In non sagittis risus.
-              Ut tempor arcu sed urna malesuada, vitae tincidunt dolor congue. Integer condimentum, augue
-              at tempor interdum, erat nunc porttitor tortor, eu feugiat ligula nisl ut massa. Curabitur
-              semper et magna molestie pellentesque. Vestibulum ante ipsum primis in faucibus orci luctus
-              et ultrices posuere cubilia Curae; Nunc euismod bibendum mi tincidunt suscipit.
+            <p>
+                Fast forward to senior year in High School, I made the decision to study Computer Engineering at Florida Agricultural and Mechanical University.
+                I will never forget the unveiling of the additional layers of complexity that computers had; the softer side of things if you will, with my Introduction
+                to Programming course.  This along with other courses I studied and learned to gain an appreciation of the hardware, underlying drivers, operating systems
+                and end user applications that people use and depend on everyday.  During my studies I interned and would later start my career at Computer Sciences Corporation (CSC).
+                After two years and some truly formative experiences with the people I met and projects that I was a part of I solidified my commitment and resolve to keep
+                developing my skillset.  My passion and desire to grow and develop could not be contained; so I decided to be part of a very small group of brave trail blazers
+                and enrolled in an experimental and new approach to learning web development: Dev Boot Camp Chicago (DBC).  The program had just opened its doors and this was a huge
+                risk, which many of my family and mentors advised against, encouraging me to stay with my current path in Washington, D.C. area.  However this was a decision I knew I
+                could not turn down and made the leap of faith to move to Chicago, IL to develop further as a Software Engineer.  The experiences I had at DBC were exactly what I needed
+                to push me both as a person and as a developer.  The program provided me with a place to focus fully on the pursuit of web and application development whilst meeting some
+                truly amazing and inspiring individuals.  I truly feel the relationships that I developed and still maintain are much more valuable than any technical skillset.
+            </p>
+            <p>
+                After DBC I would take my first role as a Software Engineer at Slalom Consulting.  I have been working at Slalom for a little over three years and have continued
+                to develop as an engineer, learning as much as I can about Software Craftsmanship and the Software Development Lifecycle (SDLC), as well as learning industry best
+                practices and most importantly I continued to learn and develop myself as a human being.  One thing that truly stuck with me during my time at Slalom are the individuals
+                who had taken an interest in me and provided me with guidance and mentorship on my journey, whom I am truly grateful for.
+            </p>
+            <p>
+                These experiences have continued to inspire me and fueled the unceasing desire to help and inspire others, affording them the same guidance encouragement, support and
+                mentorship I was afforded.  I started two initiatives within our organization and as a co-lead of one of our Employee Resource Groups (ERG), developed relationships
+                with Citizen Schools and Spark Program.  With these two programs we focused on providing these young malleable minds from Southside Chicago neighborhoods with an
+                invaluable introduction and experience with technology and business consulting.  Our ultimate goal is to spark their interest in STEM fields and provide them the
+                courage to pursue these fields through their High School and collegiate careers, not to mention exposing them to our great workspace in the Greater Downtown Chicago area.
+            </p>
+            <p>
+                As I often reflect, I am grateful for what my past and current experiences have afforded me to deepen my skillsets and am thrilled for what is still in store for me on my
+                journey led by faith, fueled by an incessant curiosity of the unknown and passion for technology and helping others.
             </p>
           </div>
         </section>
